--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,6 +104,7 @@
 
     <string name="shortcut_create_long">Create a new note</string>
 
+    <string name="pref_key_keep_screen_on" translatable="false">keepScreenOn</string>
     <string name="pref_key_note_mode" translatable="false">noteMode</string>
     <string name="pref_key_theme" translatable="false">darkTheme</string>
     <string name="pref_key_font" translatable="false">font</string>
@@ -207,6 +208,7 @@
     <string name="simple_synchronization">Synchronization</string>
     <string name="manage_accounts">Manage accounts</string>
     <string name="action_formatting_help">Formatting</string>
+    <string name="screen_always_on">Screen always on</string>
 
     <string-array name="noteMode_entries">
         <item>Open in edit mode</item>
