--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,16 +63,18 @@
     <string name="url_issues" translatable="false">https://github.com/nextcloud/notes-android/issues/new/choose</string>
     <string name="url_license" translatable="false">https://github.com/nextcloud/notes-android/blob/master/LICENSE</string>
     <string name="url_translations" translatable="false">https://www.transifex.com/nextcloud/nextcloud/</string>
-    <string name="url_maintainer" translatable="false">https://www.niedermann.it/</string>
+    <string name="url_niedermann_it" translatable="false">https://www.niedermann.it/</string>
     <string name="url_about_icon_author" translatable="false">https://github.com/nextcloud/notes/blob/76d15214f80f2bf7ea08427bff73ad145128f090/img/notes.svg</string>
     <string name="url_about_icons_disclaimer_mdi" translatable="false">https://materialdesignicons.com/</string>
 
     <string name="about_version_title">Version</string>
     <string name="about_version">You are currently using %1$s</string>
     <string name="about_maintainer_title">Maintainer</string>
-    <string name="about_maintainer" translatable="false">Niedermann IT-Dienstleistungen</string>
+    <string name="about_maintainer" translatable="false">Nextcloud</string>
     <string name="about_developers_title">Developers</string>
-    <string name="about_developers" translatable="false">Stefan Niedermann, Kristof Hamann, HeaDBanGer84, Felix Edelmann, Daniel Bailey</string>
+    <string name="about_developers" translatable="false">%1$s, Kristof Hamann, HeaDBanGer84, Felix Edelmann, Daniel Bailey</string>
+    <string name="about_developers_stefan" translatable="false">Stefan Niedermann (%1$s)</string>
+    <string name="about_developers_founder">founder</string>
     <string name="about_translators_title">Translators</string>
     <string name="about_translators_transifex">Nextcloud community on %1$s</string>
     <string name="about_translators_transifex_label" translatable="false">Transifex</string>
@@ -313,7 +315,7 @@
 
     <string name="formatting_help_images_body_1">Links have to be either complete URLs starting with a protocol and domain or absolute paths starting with a %1$s character.</string>
     <string name="formatting_help_images_body_2">In order to conform to the Markdown format, please use escape characters in the image URL. This means for example, replace spaces with %1$s in the URL.</string>
-    <string name="formatting_help_images_escaped_space" translatable="false" formatted="false">%20</string>
+    <string name="formatting_help_images_escaped_space" formatted="false" translatable="false">%20</string>
     <string name="formatting_help_images_slash" translatable="false">/</string>
     <string name="formatting_help_images_title">Images</string>
     <string name="formatting_help_images_alt">Fancy image</string>
