--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,7 @@
     <string name="listview_updated_last_month">Last month</string>
 
     <string name="settings_note_mode">Display mode for notes</string>
+    <string name="settings_note_mode_new">Notes opening behaviour</string>
     <string name="settings_theme_title">Theme</string>
     <string name="settings_font_title">Monospace font</string>
     <string name="settings_font_size">Font size</string>
@@ -122,6 +123,7 @@
     <string name="pref_key_last_note_mode" translatable="false">lastNoteMode</string>
     <string name="pref_key_background_sync" translatable="false">backgroundSync</string>
     <string name="pref_value_mode_edit" translatable="false">edit</string>
+    <string name="pref_value_mode_direct_edit" translatable="false">directEdit</string>
     <string name="pref_value_mode_preview" translatable="false">preview</string>
     <string name="pref_value_mode_last" translatable="false">last</string>
     <string name="pref_value_font_size_small" translatable="false">small</string>
@@ -216,6 +218,13 @@
     <string-array name="noteMode_entries">
         <item>Open in edit mode</item>
         <item>Open in preview mode</item>
+        <item>Remember my last selection</item>
+    </string-array>
+
+    <string-array name="noteMode_entries_new">
+        <item>Plain edit mode</item>
+        <item>Plain preview</item>
+        <item>Rich edit mode</item>
         <item>Remember my last selection</item>
     </string-array>
 
