--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,7 @@
     <string name="listview_updated_last_month">Last month</string>
 
     <string name="settings_note_mode">Display mode for notes</string>
+    <string name="settings_note_mode_new">Notes opening behaviour</string>
     <string name="settings_theme_title">Theme</string>
     <string name="settings_font_title">Monospace font</string>
     <string name="settings_font_size">Font size</string>
@@ -122,6 +123,7 @@
     <string name="pref_key_last_note_mode" translatable="false">lastNoteMode</string>
     <string name="pref_key_background_sync" translatable="false">backgroundSync</string>
     <string name="pref_value_mode_edit" translatable="false">edit</string>
+    <string name="pref_value_mode_direct_edit" translatable="false">directEdit</string>
     <string name="pref_value_mode_preview" translatable="false">preview</string>
     <string name="pref_value_mode_last" translatable="false">last</string>
     <string name="pref_value_font_size_small" translatable="false">small</string>
@@ -213,10 +215,17 @@
     <string name="manage_accounts">Manage accounts</string>
     <string name="action_formatting_help">Formatting</string>
 
-    <string-array name="noteMode_entries">
-        <item>Open in edit mode</item>
-        <item>Open in preview mode</item>
-        <item>Remember my last selection</item>
+
+    <string name="noteMode_plain_edit">Plain edit mode</string>
+    <string name="noteMode_plain_preview">Plain preview</string>
+    <string name="noteMode_rich_edit">Rich edit mode</string>
+    <string name="noteMode_remember_last">Remember my last selection</string>
+
+    <string-array name="noteMode_entries_new" translatable="false">
+        <item>@string/noteMode_plain_edit</item>
+        <item>@string/noteMode_plain_preview</item>
+        <item>@string/noteMode_rich_edit</item>
+        <item>@string/noteMode_remember_last</item>
     </string-array>
 
     <string-array name="fontSize_entries">
@@ -357,4 +366,8 @@
     <string name="progress_import_indeterminate">Importing notes…</string>
     <string name="progress_import">Importing note %1$d of %2$d…</string>
     <string name="account_imported">Account imported.</string>
+    <string name="direct_editing_error">Error while loading rich editing</string>
+    <string name="switch_to_plain_editing">Switch to plain editing</string>
+    <string name="action_back">Back</string>
+    <string name="user_agent" translatable="false">Mozilla/5.0 (Android) %1$s-android/%2$s</string>
 </resources>
